--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-web = "4.9.0"
+chrono = "0.4.38"
+dotenv = "0.15.0"
+sea-orm = { version = "1.1.2", features = [
+    "sqlx-postgres",
+    "runtime-tokio-native-tls"]}
+sea-orm-migration = "1.1.2"
+serde = { version = "1.0", features = ["derive"] }
+sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
+tokio = { version = "1.42.0", features = ["full"] }
+validator = "0.19.0"
