--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,7 @@ jsonwebtoken = "9.3.0"
 validator = "0.19.0"
 chrono = "0.4.38"
 uuid = { version = "1.0", features = ["v4"] }
+rust_decimal = "1.36.0"
+serde_with = "3.11.0"
 
 
