--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ chrono = "0.4.38"
 uuid = { version = "1.0", features = ["v4"] }
 rust_decimal = "1.36.0"
 serde_with = "3.11.0"
+derive_more = { version = "1.0.0", features = ["display", "from"] }
 
 
