--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ dotenv = "0.15"
 bcrypt = "0.16.0"
 serde = { version = "1.0", features = ["derive"] }
 jsonwebtoken = "9.3.0"
-validator = "0.19.0"
+validator = { version = "0.19", features = ["derive"] }
 chrono = "0.4.38"
 uuid = { version = "1.0", features = ["v4"] }
 rust_decimal = "1.36.0"
